# financial-rag-project

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: database-and-deployment.mdc
data/: sample.txt
src/app/: config.py  database.py  main.py
src/rag_system/: __init__.py
